# crust-render

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: rust.yml
.github/workflow/: rust.yml
.github/workflows/: rust.yml
benches/: integrator.rs  path_trace.rs
crates/crust-core/: Cargo.toml
crates/crust-core/benches/: integrator.rs
crates/crust-core/examples/: alembic.rs  openpbr_showcase.rs  teapot.rs  write_scene.rs
crates/crust-core/src/: aabb.rs  buffer.rs  bvh.rs  bvhnode.rs  camera.rs  convert.rs  document.rs  error.rs  hittable.rs  hittable_list.rs  lib.rs  light.rs  medium.rs  ray.rs  scene.rs  tracer.rs  volume.rs  world.rs
crates/crust-core/src/guiding/: dtree.rs  field.rs  mod.rs  sdtree.rs
crates/crust-core/src/material/: blinn_phong.rs  brdf.rs  cook_torrance.rs  dielectric.rs  disney.rs  emissive.rs  lambert.rs  material.rs  metal.rs  mod.rs  openpbr.rs
crates/crust-core/src/primitives/: mesh.rs  mod.rs  smooth_triangle.rs  sphere.rs  triangle.rs
crates/crust-core/src/scene/: usd_import.rs
crates/crust-core/tests/: guiding.rs  usd_scene.rs
crates/crust-render/: Cargo.toml
crates/crust-render/benches/: integrator.rs
crates/crust-render/examples/: alembic.rs  teapot.rs  uv_mesh.rs  write_scene.rs
crates/crust-render/samples/: cornellbox.usda
crates/crust-render/src/: aabb.rs  buffer.rs  bvhnode.rs  camera.rs  convert.rs  document.rs  hittable.rs  hittable_list.rs  instance.rs  lib.rs  light.rs  main.rs  ray.rs  sampler.rs  scene_cache.rs  tracer.rs  world.rs
crates/crust-render/src/material/: blinn_phong.rs  brdf.rs  cook_torrance.rs  dielectric.rs  disney.rs  emissive.rs  lambert.rs  mat_trait.rs  material.rs  metal.rs  mod.rs  standard.rs
crates/crust-render/src/primitives/: generator.rs  mesh.rs  mod.rs  prim.rs  smooth_triangle.rs  sphere.rs  triangle.rs
crates/sampler/: Cargo.toml
crates/sampler/src/: lib.rs
crates/usd_oxidized/: Cargo.toml
crates/usd_oxidized/src/: parser.rs
crates/utils/: Cargo.toml
crates/utils/src/: color.rs  common.rs  lib.rs  mat4.rs  vec3.rs
openspec/: config.yaml
openspec/specs/cli/: spec.md
openspec/specs/image-output/: spec.md
openspec/specs/materials/: spec.md
openspec/specs/rendering/: spec.md
openspec/specs/usd-scene-import/: spec.md
samples/: box.ron  capsule.abc  cornellbox.usda  cornellbox_guided.usda  fog.usda  openpbr_showcase.ron  openpbr_showcase.usda  rectlight.usda  scene.ron  smoke.usda  teapot.ron
src/: buffer.rs  camera.rs  color.rs  common.rs  convert.rs  hittable.rs  lib.rs  light.rs  main.rs  material.rs  rayx8.rs  sampler.rs  scene.rs  sphere.rs  tracer.rs  vec3.rs  vec3x8.rs  world.rs
src/material/: blinn_phong.rs  brdf.rs  cook_torrance.rs  dielectric.rs  disney.rs  emissive.rs  lambert.rs  mat_trait.rs  metal.rs  mod.rs
src/primitives/: mod.rs
