[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2024"

[lib]
name = "ray_tracing"
path = "src/lib.rs"

[dependencies]
exr = "1.73.0"
rand = "0.9.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
rayon = "1.10.0"
clap = { version = "4.5.34", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "integrator"
harness = false