[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license-file = "LICENSE"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
glam = { version = "0.30.8", features = ["serde"] }
tracing = {version = "0.1.41", default-features = false}
exr = "1.73.0"
rand = "0.9.2"