[package]
name = "crust-core"
version = "0.1.0"
edition = { workspace = true }
license-file = { workspace = true }

[lib]
name = "crust_core"
path = "src/lib.rs"

[dependencies]
utils = { path = "../utils" }
image = { version = "0.25.6", default-features = false, features = ["png"] }
rayon = "1.10.0"
serde.workspace = true
ron = "0.11.0"
obj-rs = "0.7.4"
indicatif = "0.18.0"
once_cell = "1.21.3"
ogawa-rs = { git = "https://github.com/doubleailes/ogawa-rs" }
glam.workspace = true
tracing.workspace = true
exr.workspace = true
rand.workspace = true



[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "integrator"
harness = false
