[package]
name = "crust-core"
version = "0.1.0"
edition = { workspace = true }
license-file = { workspace = true }

[lib]
name = "crust_core"
path = "src/lib.rs"

[dependencies]
utils = { path = "../utils" }
sampler = { path = "../sampler" }
image = { version = "0.25.6", default-features = false, features = ["png"] }
rayon = "1.10.0"
indicatif = "0.18.0"
glam.workspace = true
tracing.workspace = true
exr.workspace = true
rand.workspace = true
openusd = { version = "0.5", default-features = false, features = ["geom", "lux", "shade", "render"] }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "integrator"
harness = false
