[package]
name = "crust-render"
version = "0.1.0"
edition = { workspace = true }
license-file = { workspace = true }

[lib]
name = "crust_render"
path = "src/lib.rs"

[dependencies]
utils = { path = "../utils" }
exr = "1.73.0"
rand = "0.9.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
rayon = "1.10.0"
clap = { version = "4.5.34", features = ["derive"] }
serde.workspace = true
ron = "0.9.0"

[dependencies.tracing]
version = "0.1.41"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["fmt"]


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "integrator"
harness = false
