[package]
name = "crust-render"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
crust-core = {path = "../crust-core"}
clap = { version = "4.5.48", features = ["derive"] }
tracing.workspace = true
exr.workspace = true

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["fmt"]